--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,7 +80,7 @@
     </nav>
 
     <!-- Page Content  -->
-    <div id="content">
+    <div id="content" style="width: 81%;">
 
         <nav class="navbar">
             <div class="container-fluid flex-nowrap">
