--- a/src/app/edit/edit.component.css
+++ b/src/app/edit/edit.component.css
@@ -122,7 +122,7 @@ a:focus {
     left: 5rem;
 }
 
-#sidebar div a:hover {}
+
 
 .nv-btn {
     background-color: white;
@@ -344,7 +344,7 @@ a.article:hover {
 .crop {
     position: fixed;
     height: 3.2rem;
-    background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D');
+    background-image: url('../../assets/photo-1507525428034-b723cf961d3e.avif');
     background-repeat: repeat;
     background-size: 66px 59px;
     width: -webkit-fill-available;
