--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -41,7 +41,7 @@
                 </svg><span class="Tab__Label-sc-1rbvtr2-2 hYWqiW tab-label">Search</span>
             </a>
             <a aria-current="page" class="Tab__RootWrapper-sc-1rbvtr2-0 ecshKI active" data-testid="@editor/settings"
-                aria-disabled="false" href="/edit/1cb64421-3b0e-45c9-b4d1-d1c02eaceb74/"><svg width="40" height="40"
+                aria-disabled="false" href="#"><svg width="40" height="40"
                     viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="20" cy="20" r="20" fill="#0098FD"></circle>
                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -61,7 +61,7 @@
                 </svg><span class="Tab__Label-sc-1rbvtr2-2 hYWqiW tab-label">Settings</span>
             </a>
             <a class="Tab__RootWrapper-sc-1rbvtr2-0 dyJPyb" data-testid="@editor/media" aria-disabled="false"
-                href="/edit/1cb64421-3b0e-45c9-b4d1-d1c02eaceb74/media"><svg width="40" height="40" viewBox="0 0 40 40"
+                href="#"><svg width="40" height="40" viewBox="0 0 40 40"
                     fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle class="background" opacity="0" cx="20" cy="20" r="20" fill="#9094A5"></circle>
                     <g filter="url(#filter0_i_605_11522)">
@@ -113,7 +113,7 @@
                 </svg><span class="Tab__Label-sc-1rbvtr2-2 hYWqiW tab-label">Media</span>
             </a>
             <a class="Tab__RootWrapper-sc-1rbvtr2-0 dyJPyb" data-testid="@editor/audio" aria-disabled="false"
-                href="/edit/1cb64421-3b0e-45c9-b4d1-d1c02eaceb74/media-audio"><svg width="40" height="40"
+                href="#"><svg width="40" height="40"
                     viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle class="background" opacity="0" cx="20" cy="20" r="20" fill="#9094A5"></circle>
                     <g filter="url(#filter0_i_5002_422651)">
@@ -163,7 +163,7 @@
                 </svg><span class="Tab__Label-sc-1rbvtr2-2 hYWqiW tab-label">Audio</span>
             </a>
             <a class="Tab__RootWrapper-sc-1rbvtr2-0 dyJPyb" data-testid="@editor/subtitles" aria-disabled="false"
-                href="/edit/1cb64421-3b0e-45c9-b4d1-d1c02eaceb74/subtitles"><svg width="40" height="40"
+                href="#"><svg width="40" height="40"
                     viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle class="background" opacity="0" cx="20" cy="20" r="20" fill="#9094A5"></circle>
                     <path class="main" fill-rule="evenodd" clip-rule="evenodd"
@@ -196,7 +196,7 @@
                 </svg><span class="Tab__Label-sc-1rbvtr2-2 hYWqiW tab-label">Subtitles</span>
             </a>
             <a class="Tab__RootWrapper-sc-1rbvtr2-0 dyJPyb" data-testid="@editor/text" aria-disabled="false"
-                href="/edit/1cb64421-3b0e-45c9-b4d1-d1c02eaceb74/text"><svg width="40" height="40" viewBox="0 0 40 40"
+                href="#"><svg width="40" height="40" viewBox="0 0 40 40"
                     fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle class="background" opacity="0" cx="20" cy="20" r="20" fill="#9094A5"></circle>
                     <path class="main" fill-rule="evenodd" clip-rule="evenodd"
@@ -229,7 +229,7 @@
                 </svg><span class="Tab__Label-sc-1rbvtr2-2 hYWqiW tab-label">Text</span>
             </a>
             <a class="Tab__RootWrapper-sc-1rbvtr2-0 dyJPyb" data-testid="@editor/elements" aria-disabled="false"
-                href="/edit/1cb64421-3b0e-45c9-b4d1-d1c02eaceb74/elements"><svg width="40" height="40"
+                href="#"><svg width="40" height="40"
                     viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle class="background" opacity="0" cx="20" cy="20" r="20" fill="#9094A5"></circle>
                     <path class="main"
@@ -251,7 +251,7 @@
                 </svg><span class="Tab__Label-sc-1rbvtr2-2 hYWqiW tab-label">Elements</span>
             </a>
             <a class="Tab__RootWrapper-sc-1rbvtr2-0 dyJPyb" data-testid="@editor/record" aria-disabled="false"
-                href="/edit/1cb64421-3b0e-45c9-b4d1-d1c02eaceb74/record"><svg width="40" height="40" viewBox="0 0 40 40"
+                href="#"><svg width="40" height="40" viewBox="0 0 40 40"
                     fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle class="background" opacity="0" cx="20" cy="20" r="20" fill="#9094A5"></circle>
                     <g filter="url(#filter0_i_22821_144295)">
@@ -484,7 +484,7 @@
         </div>
 
         <div class="image1 container-fluid d-flex justify-content-center mt-2">
-            <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+            <img src="../../assets/photo-1507525428034-b723cf961d3e.avif" alt="" id="bigImage"
                 style="width: 120vh;
             height: 60vh;">
         </div>
