--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -232,7 +232,7 @@
                     <div class="card-1">
                         <div class="container-fluid">
                             <img class="card-img img-fluid"
-                                src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+                                src="../../assets/photo-1507525428034-b723cf961d3e.avif"
                                 alt="">
                         </div>
                         <div class="details">
@@ -262,7 +262,7 @@
                         <div class="card-2">
                             <div class="container-fluid">
                                 <img class="card-img2"
-                                    src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+                                    src="../../assets/photo-1507525428034-b723cf961d3e.avif"
                                     alt="">
                             </div>
                         </div>
@@ -270,43 +270,35 @@
                         <div class="card-2">
                             <div class="container-fluid">
                                 <img class="card-img2"
-                                    src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+                                    src="../../assets/photo-1507525428034-b723cf961d3e.avif"
                                     alt="">
                             </div>
                         </div>
                         <div class="card-2">
                             <div class="container-fluid">
                                 <img class="card-img2"
-                                    src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+                                    src="../../assets/photo-1507525428034-b723cf961d3e.avif"
                                     alt="">
                             </div>
                         </div>
                         <div class="card-2">
                             <div class="container-fluid">
                                 <img class="card-img2"
-                                    src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+                                    src="../../assets/photo-1507525428034-b723cf961d3e.avif"
                                     alt="">
                             </div>
                         </div>
                         <div class="card-2">
                             <div class="container-fluid">
                                 <img class="card-img2"
-                                    src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+                                    src="../../assets/photo-1507525428034-b723cf961d3e.avif"
                                     alt="">
                             </div>
                         </div>
                         <div class="card-2">
                             <div class="container-fluid">
                                 <img class="card-img2"
-                                    src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
-                                    alt="">
-                            </div>
-                        </div>
-
-                        <div class="card-2">
-                            <div class="container-fluid">
-                                <img class="card-img2"
-                                    src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+                                    src="../../assets/photo-1507525428034-b723cf961d3e.avif"
                                     alt="">
                             </div>
                         </div>
@@ -314,7 +306,7 @@
                         <div class="card-2">
                             <div class="container-fluid">
                                 <img class="card-img2"
-                                    src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+                                    src="../../assets/photo-1507525428034-b723cf961d3e.avif"
                                     alt="">
                             </div>
                         </div>
@@ -322,7 +314,15 @@
                         <div class="card-2">
                             <div class="container-fluid">
                                 <img class="card-img2"
-                                    src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VhJTIwYmVhY2h8ZW58MHx8MHx8fDA%3D"
+                                    src="../../assets/photo-1507525428034-b723cf961d3e.avif"
+                                    alt="">
+                            </div>
+                        </div>
+
+                        <div class="card-2">
+                            <div class="container-fluid">
+                                <img class="card-img2"
+                                    src="../../assets/photo-1507525428034-b723cf961d3e.avif"
                                     alt="">
                             </div>
                         </div>
